[project]
name = "weewx-meshtastic"
version = "0.1.0"
description = "WeeWX extension: push weather to a Meshtastic node (telemetry + dedicated channel + DM bot)."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "GPL-3.0-or-later" }
authors = [{ name = "MeteoR-OI" }]
dependencies = ["meshtastic>=2.3"]

[project.optional-dependencies]
qr = ["qrcode>=7"]  # QR ASCII du canal dans setup-channel (optionnel)
test = ["pytest>=7", "pytest-cov>=4", "weewx>=4", "ruff>=0.4", "qrcode>=7"]

[project.urls]
Homepage = "https://github.com/MeteoR-OI/weewx-meshtastic"

[tool.pytest.ini_options]
pythonpath = ["bin/user"]
testpaths = ["tests"]
addopts = "--cov=meshtastic_weather --cov-branch --cov-report=term-missing --cov-fail-under=100"

[tool.coverage.run]
branch = true
source = ["meshtastic_weather"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
